--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,11 @@ footer {
     height: 10vh;
     width: 100vw;
 }
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
