--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@500&display=swap');
+
+body{
+  font-family: "Poppins", sans-serif;
+  background-color: #1e202d;
+}
+
 * {
     margin: 0;
     padding: 0;
