--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,12 @@
     box-sizing: border-box;
 }
 
+.logo {
+    width: 50px;
+    height: 50px;
+    display: block;
+}
+
 body {
     font-family: "Poppins", sans-serif;
     background: linear-gradient(180deg,var(--bg-1),var(--bg-2));
