--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,15 @@ body {
 
     .navbar ul {
         flex-direction: column;
+        align-items: center;
+        padding: 10px 0;
+    }
+
+    .navbar img.logo {
+        margin: 10px auto 12px;
+        width: 56px;
+        height: 56px;
+        border-radius: 6px;
     }
 
     .navbar ul li a {
